Fixed Window Size on Safari Browser

--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@ body {
 
 .modalDialog > div {
     width: 80%;
-    max-height: 70%;
+    max-height: 90%;
     top: 20px;
     position: relative;
     margin: auto;
